--- a/css/style.css
+++ b/css/style.css
@@ -44,21 +44,43 @@ p {
 
 a {
     font-size: 16px;
-    color: #C12258;
-    text-decoration: wavy;
-    text-decoration: blue;
+    color: #B21F50;
+    text-decoration: underline wavy;
 }
 
 a:focus {
-    border: black;
+    border-style: solid;
+    border-color: black;
     border-radius: 2px;
 }
 
 table {
-    border: 2px solid black;
     padding: 15px;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 15px;
+    border: 2px solid black;
+}
+
+thead {
+    border-radius: 15px 15px 0 0;
+}
+
+thead tr:first-child th:first-child {
+    border-radius: 15px 0 0 0;
+    border: 2px;
+}
+
+thead tr:first-child th:last-child {
+    border-radius: 0 15px 0 0;
+}
+
+tbody tr:last-child td:first-child {
+    border-radius: 0 0 0 15px;
+}
+
+tbody tr:last-child td:last-child {
+    border-radius: 0 0 15px 0;
 }
 
 .colhead {
@@ -75,10 +97,28 @@ table {
 
 td {
     padding: 15px;
+    text-align: center;
 }
 
 tr {
-    border-top: 2px solid black;
+    text-align: center;
+    border-top: solid 2px black;
+}
+
+thead tr {
+    border-top: 0;
+}
+
+tr:nth-child(odd) {
+    background-color: #D1D1D1;
+}
+
+tr:nth-child(even) {
+    background-color: transparent;
+}
+
+tr:hover {
+    background-color: rgb(126, 8, 32, .5);
 }
 
 * {}
