--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     font-size: 16px;
     margin: 1.2em;
     /* https://stackoverflow.com/questions/19706528/how-to-stretch-a-background-image-to-a-fill-a-div */
-    background: url(../images/pigeon-background.jpeg) no-repeat center center fixed;
+    background: url(../images/pigeon-background.jpeg) no-repeat center center fixed #DDDDDD;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
